src/test/pass/unexpected_eof.ly
<?lily integer a = 12 ?>
<?lily integer v = 10 ?>