src/test/fail/early_close_tag.ly
<@lily integer a    a = ((a) @>
